# evoli

branches/accel/: TODO  configure.in
branches/accel/src/: protein.hh
branches/accel/src/driver/: tr-driver.cc  translation-experiment.hh
branches/accel/src/evolver/: Makefile.am  fitness-evaluator.cc
branches/accel/src/folder/: compact-lattice-folder.cc  decoy-contact-folder.cc  decoy-contact-folder.hh  folder.hh
branches/accel/src/gene/: Makefile.am  codon.cc  gene-util.hh  mutator.cc  protein.cc  protein.hh  sequence.cc  sequence.hh  translator.cc
branches/accel/src/python/: decoyfoldermodule.cc
branches/accel/src/utils/: decoy-sequence-analyzer.cc  get-weights.cc  sequence-generator.cc
branches/accel/test/: Makefile.am  benchmark.cc  benchmark_dfi.cc  benchmark_dhfi.cc  folder-test.py  t.folder.h  t.mutator.h  t.population.h  t.protein.h  t.translator.h
branches/accel/test/bin_tests/: get-weights.control  sequence-generator_2.control  tr-driver_tr.control
branches/evoli-0.x/src/driver/: Makefile.am  aa-seq-driver.cc  aa-seq-driver.hh  neut-driver.cc  neut-driver.hh  struct-driver.cc  translation-experiment.cc
branches/evoli-obj-model/test/: Makefile.am  autocutee.mk  cutee.cc  cutee.h  t.genotype.h  t.protein.h  test-fitness-density.cc
branches/evoli-obj-model/utils/: Makefile.am
branches/new-folder/: Makefile.am  README.txt  configure.in
branches/new-folder/src/driver/: Makefile.am  tr-driver.cc  translation-experiment.cc  translation-experiment.hh
branches/new-folder/src/evolver/: Makefile.am  fitness-evaluator.cc  fitness-evaluator.hh
branches/new-folder/src/folder/: Makefile.am  compact-lattice-folder.cc  compact-lattice-folder.hh  decoy-contact-folder.cc  decoy-contact-folder.hh  protein-folder.hh  protein.cc  protein.hh
branches/new-folder/src/python/: setup.py
branches/new-folder/src/utils/: sequence-generator.cc
branches/new-folder/test/: autocutee.mk  t.folder.h  t.protein.h
branches/newseq/src/evolver/: Makefile.am  fitness-evaluator.cc  fitness-evaluator.hh  mutator.cc  mutator.hh  population.hh  test.cc
branches/reg/src/gene/: Makefile.am  codon.hh  expressible-gene.cc  expressible-gene.hh  genetic-code.cc  mutator.hh  protein.cc  upstream.cc  upstream.hh
branches/reg/src/utils/: Makefile.am  decoy-sequence-generator.cc  evolved-dg-dist.cc  gb-analyzer.cc  misfold.cc  mistime.cc  snp-mistrans-stability.cc
trunk/: Doxyfile  Evoli.kdevelop  Makefile  Makefile.am  README.txt  TODO  configure.in  ddg-dist.cc  evolved-ddg-dist.cc  fitness-advantage.cc  fract-func2.cc  mutator.hh  partition-sum.cc  snp-stability.cc  snp-wt-stability.cc  time-evol.cc  tolerated-mutations.cc  translation-experiment.hh
trunk/config/: Make-rules
trunk/doc/: Doxyfile  Makefile.am
trunk/driver/: Makefile.am  translation-experiment.cc
trunk/folder/: fitness-evaluator.hh  genetic-code.cc
trunk/lib/: Makefile.am
trunk/python/: Makefile.am  setup.py
trunk/src/: Makefile.am  codon.hh  dgdist.cc  evoli_docs.dox  fitness-evaluator.cc  genetic-code.cc  genetic-code.hh  hillclimber.cc  misfold.bkp.cc  protein-folder.hh  protein.cc  snp-fitness.cc  tools.hh  translator.cc  translator.hh
trunk/src/driver/: Makefile.am  README.txt  tr-cutoff-driver.cc  tr-decoy-driver.cc  tr-decoy-experiment.cc  tr-decoy-experiment.hh  tr-disp-driver.cc  tr-driver.cc  tr-fxnloss-driver.cc  translation-experiment.cc  translation-experiment.hh
trunk/src/evolver/: Makefile.am  fitness-evaluator.cc  fitness-evaluator.hh  genebank.hh  mutator.cc  mutator.hh  population.cc  population.hh
trunk/src/folder/: Makefile.am  coding-sequence.hh  codon.cc  codon.hh  compact-lattice-folder.cc  compact-lattice-folder.hh  decoy-contact-folder.cc  decoy-contact-folder.hh  folder-util.hh  folder.hh  gene-util.hh  genetic-code.cc  genetic-code.hh  mutator.cc  nucleotide-sequence.hh  protein-contact-energies.cc  protein-contact-energies.hh  protein-folder.cc  protein-folder.hh  protein.cc  protein.hh  sequence.hh  tools.hh  translator.cc
trunk/src/gene/: Makefile.am  coding-sequence.hh  codon.cc  gene-util.hh  genetic-code.cc  genetic-code.hh  mutator-test.cc  mutator.cc  mutator.hh  protein.cc  protein.hh  sequence.hh  translator.hh
trunk/src/python/: Makefile.am  codonmodule.cc  decoyfoldermodule.cc  foldermodule.cc  misfoldmodule.cc  mistransmodule.cc  setup.py
trunk/src/tools/: Makefile.am  cokus.c  cpp-casting-helper.hh  randmt.cc  random.cc  random.hh  random.t.cc  tools.hh
trunk/src/utils/: Makefile.am  decoy-sequence-analyzer.cc  decoy-sequence-generator.cc  fold-protein.py  gb-analyzer.cc  genebank-analyzer.cc  get-weights.cc  misfold.cc  neutral-evolve.cc  pdb.py  pdbcontacts.py  sequence-analyzer.cc  sequence-generator.cc  snp-mistrans-stability.cc  structure-printer.cc  time-evol.cc
trunk/test/: Makefile.am  autocutee.mk  cutee.h  folder-test.py  perf-test-decoy.cc  perf-test.cc  t.codon.h  t.fitness-evaluator.h  t.folder.h  t.population.h  t.protein.h  t.random.h  t.tools.h  test-binaries.py  test-protein-folder.cc
trunk/test/bin_tests/: sequence-generator_1.control  tr-driver_rob.control
trunk/test/bin_tests/sequence-generator_1/: testrun_log.txt
trunk/test/bin_tests/sequence-generator_2/: testrun_log.txt
trunk/test/bin_tests/tr-driver_acc/: testrun_log.txt
trunk/test/bin_tests/tr-driver_tr/: testrun_log.txt
trunk/test/data/: williams-good-seqs.txt
trunk/test/data/contact_maps/: 1bs0A_6.0_CA.cmap  1cjcA_6.0_CA.cmap  1csn _6.0_CA.cmap  1d4tA_6.0_CA.cmap  1diiA_6.0_CA.cmap  1dj0A_6.0_CA.cmap  1dl2A_6.0_CA.cmap  1e1oA_6.0_CA.cmap  1e9iA_6.0_CA.cmap  1ecfA_6.0_CA.cmap  1ei6A_6.0_CA.cmap  1epuA_6.0_CA.cmap  1ex7A_6.0_CA.cmap  1ezfA_6.0_CA.cmap  1f28A_6.0_CA.cmap  1f3lA_6.0_CA.cmap
trunk/test/data/rand_contact_maps/: maps.txt  protein_0000021-contacts.txt  protein_0000043-contacts.txt
trunk/test/data/williams_contact_maps/: 16vpA_6_CB.cmap  1bt3A_6_CB.cmap  1g9nG_6_CB.cmap  1ghqA_6_CB.cmap  1gq8A_6_CB.cmap  1gxrA_6_CB.cmap  1hm4A_6_CB.cmap  1idm__6_CB.cmap  (+10 more)
trunk/utils/: Makefile.am  genebank-analyzer.cc  misfold.cc  sequence-generator.cc
(+515 files in other folders)
