# **********************************************
#          Initial setup, project name, etc.
# **********************************************
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([evoli], [0.1], [dadrummond@gmail.com])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_SRCDIR([src/folder/folder.hh])
AM_INIT_AUTOMAKE([1.9 foreign])

# **********************************************
#            Check for compilers and libraries
# **********************************************

AC_LANG_CPLUSPLUS

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS(iostream sstream fstream)
AC_CHECK_HEADERS([python2.4/Python.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_CHECK_FUNCS([pow sqrt])

# **********************************************
#                   Configure options
# **********************************************

# debuging and profiling options
AC_ARG_ENABLE(debug,
[  --enable-debug: Compile with debugging symbols],
  CPPFLAGS="-g -DDEBUG",
  CPPFLAGS="-O2")

AC_ARG_ENABLE(optimization,
[  --enable-optimization: Compile with optimization],
  CPPFLAGS="${CPPFLAGS} -O3 -ffast-math -fomit-frame-pointer",
)

AC_ARG_ENABLE(profile,
[  --enable-profile: Compile with profiling symbols],
  CPPFLAGS="${CPPFLAGS} -pg -a")

# documentation
AC_ARG_ENABLE(apidoc,
  [  --disable-apidoc: Do not build API documentation],
  [bapidoc=no],
  # check whether doxygen exists in path, and build documentation only when it exists
  AC_CHECK_PROG(bapidoc, doxygen, yes, no )
)
AM_CONDITIONAL(BUILD_APIDOC, test x$bapidoc = xyes)

# **********************************************
#                 Makefile generation
# **********************************************
AC_CONFIG_FILES([Makefile src/Makefile src/tools/Makefile src/driver/Makefile src/folder/Makefile
				src/evolver/Makefile src/python/Makefile src/utils/Makefile
				doc/Makefile test/Makefile])
AC_OUTPUT
